// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getSEOPropsForPage() > title only 1`] = `
{
  "links": {
    "canonical": "https://cheatsheet.hhf.co.in/react",
  },
  "meta": {
    "app:pageurl": "https://cheatsheet.hhf.co.in/react",
    "description": "The one-page guide to React: usage, examples, links, snippets, and more.",
  },
  "metaProperties": {
    "article:tag": [],
    "og:description": "The one-page guide to React: usage, examples, links, snippets, and more.",
    "og:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "og:image:height": "471",
    "og:image:width": "900",
    "og:site_name": "cheatsheet.hhf.co.in cheatsheets",
    "og:title": "React cheatsheet",
    "og:type": "article",
    "og:url": "https://cheatsheet.hhf.co.in/react",
    "twitter:description": "The one-page guide to React: usage, examples, links, snippets, and more.",
    "twitter:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "twitter:title": "React cheatsheet",
  },
  "title": "React cheatsheet",
}
`;

exports[`getSEOPropsForPage() > with Markdown description 1`] = `
{
  "links": {
    "canonical": "https://cheatsheet.hhf.co.in/react",
  },
  "meta": {
    "app:pageurl": "https://cheatsheet.hhf.co.in/react",
    "description": "A React cheatsheet (Markdown text) · One-page guide to React",
  },
  "metaProperties": {
    "article:tag": [],
    "og:description": "A React cheatsheet (Markdown text) · One-page guide to React",
    "og:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "og:image:height": "471",
    "og:image:width": "900",
    "og:site_name": "cheatsheet.hhf.co.in cheatsheets",
    "og:title": "React cheatsheet",
    "og:type": "article",
    "og:url": "https://cheatsheet.hhf.co.in/react",
    "twitter:description": "A React cheatsheet (Markdown text) · One-page guide to React",
    "twitter:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "twitter:title": "React cheatsheet",
  },
  "title": "React cheatsheet",
}
`;

exports[`getSEOPropsForPage() > with description 1`] = `
{
  "links": {
    "canonical": "https://cheatsheet.hhf.co.in/react",
  },
  "meta": {
    "app:pageurl": "https://cheatsheet.hhf.co.in/react",
    "description": "A React cheatsheet · One-page guide to React",
  },
  "metaProperties": {
    "article:tag": [],
    "og:description": "A React cheatsheet · One-page guide to React",
    "og:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "og:image:height": "471",
    "og:image:width": "900",
    "og:site_name": "cheatsheet.hhf.co.in cheatsheets",
    "og:title": "React cheatsheet",
    "og:type": "article",
    "og:url": "https://cheatsheet.hhf.co.in/react",
    "twitter:description": "A React cheatsheet · One-page guide to React",
    "twitter:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "twitter:title": "React cheatsheet",
  },
  "title": "React cheatsheet",
}
`;

exports[`getSEOPropsForPage() > with description, keywords 1`] = `
{
  "links": {
    "canonical": "https://cheatsheet.hhf.co.in/react",
  },
  "meta": {
    "app:pageurl": "https://cheatsheet.hhf.co.in/react",
    "description": "A React cheatsheet · One-page guide to React",
  },
  "metaProperties": {
    "article:tag": [],
    "og:description": "A React cheatsheet · One-page guide to React",
    "og:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "og:image:height": "471",
    "og:image:width": "900",
    "og:site_name": "cheatsheet.hhf.co.in cheatsheets",
    "og:title": "React cheatsheet",
    "og:type": "article",
    "og:url": "https://cheatsheet.hhf.co.in/react",
    "twitter:description": "A React cheatsheet · One-page guide to React",
    "twitter:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "twitter:title": "React cheatsheet",
  },
  "title": "React cheatsheet",
}
`;

exports[`getSEOPropsForPage() > with keywords 1`] = `
{
  "links": {
    "canonical": "https://cheatsheet.hhf.co.in/react",
  },
  "meta": {
    "app:pageurl": "https://cheatsheet.hhf.co.in/react",
    "description": "hooks · components · props · One-page guide to React",
  },
  "metaProperties": {
    "article:tag": [],
    "og:description": "hooks · components · props · One-page guide to React",
    "og:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "og:image:height": "471",
    "og:image:width": "900",
    "og:site_name": "cheatsheet.hhf.co.in cheatsheets",
    "og:title": "React cheatsheet",
    "og:type": "article",
    "og:url": "https://cheatsheet.hhf.co.in/react",
    "twitter:description": "hooks · components · props · One-page guide to React",
    "twitter:image": "https://assets.cheatsheet.hhf.co.in/previews/react.jpg",
    "twitter:title": "React cheatsheet",
  },
  "title": "React cheatsheet",
}
`;
